# Activity-Log-Service

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  mongo-init.js  package-lock.json  tsconfig.json
Node TS api/: package.json
Node TS api/scripts/: load-test-ingest.js  load-test-rust.js
Node TS api/src/config/types/: index.ts
Node TS api/src/controllers/: logController.ts
Node TS api/src/routes/: index.ts
Node TS api/src/services/: logService.ts
Node TS api/src/utils/: errorHandler.ts  logger.ts  metrics.ts
Rust/: .env.example  Cargo.toml  README.md
Rust/src/: config.rs  handlers.rs  main.rs  models.rs
scripts/: benchmark.js
src/: index.ts
src/config/: config.ts  database.ts  kafka.ts  redis.ts
src/consumer/: index.ts
src/utils/: rateLimiter.ts  validate.ts
src/validators/: errorHandler.ts  logValidator.ts
